# pydian

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ideas.md  pyproject.toml
.github/workflows/: test.yml
pydian/: __init__.py  dataframes.py  dict.py  dicts.py  eval.py  functional.py  mapper.py  mapping.py  partials.py  types.py
pydian/lib/: dict.py  enums.py  partials.py  types.py  util.py
tests/: conftest.py  test_dataframes.py  test_dict.py  test_dicts.py  test_functional.py  test_mapper.py  test_mapping.py  test_mapping_fhir.py  test_mapping_keys.py  test_mapping_values.py  test_partials.py  test_util.py
tests/data/: patient_example.json
tests/lib/: test_dict.py  test_util.py
