[tool.poetry]
name = "pydian"
version = "0.2.3"
description = "Library for pythonic data interchange"
authors = ["Eric Pan <eric.pan@canvasmedical.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jmespath = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
src_paths = ["pydian"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
